--- a/app/globals.css
+++ b/app/globals.css
@@ -1,11 +1,16 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  --tier-s-color: #fd807f;
+  --tier-a-color: #ffbf7e;
+  --tier-b-color: #ffff80;
+  --tier-c-color: #80ff80;
+  --tier-d-color: #7fffff;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -16,18 +21,12 @@
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+h1 {
+  @apply font-lusitana text-2xl;
 }
