module: add dnd package

--- a/app/globals.css
+++ b/app/globals.css
@@ -26,18 +26,18 @@ h1, h2, h3, p, a, li {
   @apply text-white
 }
 
+p {
+  @apply font-raleway text-base;
+}
+
 h1 {
-  @apply font-lusitana text-2xl;
+  @apply font-luckiestGuy text-4xl;
 }
 
 h2 {
-  @apply font-lusitana text-2xl;
+  @apply font-oswald text-3xl;
 }
 
 h3 {
-  @apply font-lusitana text-lg;
-}
-
-p {
-  @apply font-lusitana text-base;
+  @apply font-oswald text-2xl;
 }
